# RunAwayAndUseMetal

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  run-build.bat  source.py  vcpkg.json
asset/include/: ImageLoader.h  SceneLoader.h
asset/loader/: ImageLoader.cpp  ImageLoader.h  Loader.cpp  Loader.h  (+1 more)
core/: CMakeLists.txt  core.h  data.h  define.h  impl.cpp  math.h
core/thread/: Worker.h  execution.h
core/utils/: Archive.cpp  Archive.h  ArchiveTypes.h  CyclicCounter.h  containers.h  log.h  lut.h  utils.h
dependencies/: CMakeLists.txt
docs/: graphs.md  workaround.md
framework/: CMakeLists.txt
framework/Event/: Event.cpp  Event.h  KeyboardEvent.cpp  KeyboardEvent.h  MouseEvent.cpp  MouseEvent.h  WindowEvent.h
framework/Event/include/: Event.h
framework/asset/include/: ImageLoader.h  Loader.h  SceneLoader.h
framework/asset/resources/shader/: simple.layout
framework/asset/source/: Loader.cpp  SceneLoader.cpp
framework/game/: Director.cpp  Director.h  World.cpp  World.h
framework/platform/common/: Input.h  window.cpp  window.h
framework/platform/common/include/: window.h
framework/platform/common/source/: window.cpp
framework/platform/windows/builds/: qt6.conf
framework/platform/windows/include/: window.h
framework/platform/windows/source/: window.cpp
platform/GLFW/: CMakeLists.txt
platform/GLFW/include/: window.h
platform/GLFW/source/: window.cpp
platform/windows/: CMakeLists.txt
platform/windows/source/: window.cpp
renderer/: CMakeLists.txt
renderer/feature/: DynamicBuffer.cpp  DynamicBuffer.h  VirtualTexture.cpp  VirtualTexture.h
renderer/graph/: AccessGraph.cpp  AccessGraph.h  CMakeLists.txt  GraphScheduler.cpp  GraphScheduler.h  GraphTypes.h  GraphUtils.cpp  GraphUtils.h  Graphs.cpp  Graphs.h  Pipeline.cpp  Pipeline.h  RenderGraph.cpp  RenderGraph.h  ResourceGraph.cpp  ResourceGraph.h  SceneGraph.cpp  SceneGraph.h  Serialization.cpp  Serialization.h  ShaderGraph.cpp  ShaderGraph.h  TaskGraph.h
renderer/graph/include/: AccessGraph.h  GraphExecutor.h  GraphTypes.h  GraphUtils.h  Graphs.h  RenderGraph.h  ResourceGraph.h  SceneGraph.h  Serialization.h  ShaderGraph.h
renderer/graph/source/: AccessGraph.cpp  GraphUtils.cpp  Graphs.cpp  RenderGraph.cpp  ResourceGraph.cpp  SceneGraph.cpp  Serialization.cpp  ShaderGraph.cpp
renderer/rhi/: CMakeLists.txt  RHIDefine.h  RHIUtils.cpp
renderer/rhi/base/: RHIAccelerationStructure.h  RHIBuffer.h  RHIBufferView.h  RHICommandBuffer.h  RHICommandPool.h  RHIComputeEncoder.h  RHIComputePipeline.h  RHIDefine.h  RHIDescriptorSet.h  RHIDevice.h  RHIGraphicsPipeline.h  RHIImage.h  RHIImageView.h  RHIManager.h  RHIPipelineLayout.h  RHIQueue.h  RHIRaytracingEncoder.h  RHIRaytracingPipeline.h  RHIRenderEncoder.h  RHISampler.h  RHISemaphore.h  RHIShader.h  RHISparseImage.h  RHIStagingBuffer.cpp  RHIStagingBuffer.h  RHISwapchain.h  RHIUtils.cpp  RHIUtils.h
renderer/rhi/include/: RHIBlitEncoder.h  RHIBuffer.h  RHIBufferView.h  RHICommandBuffer.h  RHICommandPool.h  RHIComputeEncoder.h  RHIDefine.h  RHIDescriptorPool.h  RHIDescriptorSet.h  RHIDescriptorSetLayout.h  RHIDevice.h  RHIFrameBuffer.h  RHIGraphicsPipeline.h  RHIImage.h  RHIImageView.h  RHIInputAssembly.h  RHIManager.h  RHIPipelineLayout.h  RHIQueue.h  RHIRenderEncoder.h  RHIRenderPass.h  RHIResource.h  RHISampler.h  RHIShader.h  RHISwapchain.h  RHIUtils.h  VKDefine.h  VKDevice.h  VKGraphicsPipeline.h  VKImage.h  VKImageView.h  VKPipelineLayout.h  VKShader.h  VKSwapchain.h  VKUtils.h
renderer/rhi/source/: RHIResource.cpp  VKDevice.cpp  VKGraphicsPipeline.cpp  VKImageView.cpp  VKPipelineLayout.cpp  VKQueue.cpp  VKRenderPass.cpp  VKShader.cpp  VKSwapchain.cpp  VKUtils.cpp
renderer/rhi/vulkan/: CMakeLists.txt  VKAccelerationStructure.cpp  VKAccelerationStructure.h  VKBlitEncoder.cpp  VKBlitEncoder.h  VKBuffer.cpp  VKBuffer.h  VKBufferView.cpp  VKCommandBuffer.cpp  VKCommandBuffer.h  VKCommandPool.cpp  VKComputeEncoder.cpp  VKComputeEncoder.h  VKComputePipeline.cpp  VKComputePipeline.h  VKDefine.h  VKDescriptorPool.cpp  VKDescriptorPool.h  VKDescriptorSet.cpp  VKDescriptorSet.h  VKDescriptorSetLayout.cpp  VKDescriptorSetLayout.h  VKDevice.cpp  VKDevice.h  VKFrameBuffer.h  VKGraphicsPipeline.cpp  VKGraphicsPipeline.h  VKImage.cpp  VKImage.h  VKImageView.cpp  VKImageView.h  VKPipelineLayout.cpp  VKPipelineLayout.h  VKQueue.cpp  VKQueue.h  VKRaytracingEncoder.cpp  VKRaytracingEncoder.h  VKRenderEncoder.cpp  VKRenderEncoder.h  VKSampler.cpp  (+11 more)
renderer/rhi/vulkan/include/: VKBlitEncoder.h  VKBuffer.h  VKCommandBuffer.h  VKCommandPool.h  VKDefine.h  VKDescriptorSet.h  VKDescriptorSetLayout.h  VKDevice.h  VKFrameBuffer.h  VKGraphicsPipeline.h  VKImage.h  VKImageView.h  VKInputAssembly.h  VKQueue.h  VKRenderEncoder.h  VKRenderPass.h  VKSampler.h  VKShader.h  VKSwapchain.h  VKUtils.h
renderer/rhi/vulkan/source/: VKBlitEncoder.cpp  VKBuffer.cpp  VKCommandBuffer.cpp  VKDescriptorPool.cpp  VKDescriptorSet.cpp  VKDescriptorSetLayout.cpp  VKDevice.cpp  VKFrameBuffer.cpp  VKGraphicsPipeline.cpp  VKImage.cpp  VKImageView.cpp  VKInputAssembly.cpp  VKPipelineLayout.cpp  VKQueue.cpp  VKRenderEncoder.cpp  VKRenderPass.cpp  VKSampler.cpp  VKShader.cpp  VKSwapchain.cpp  VKUtils.cpp
renderer/scene/: BindGroup.cpp  BindGroup.h  CMakeLists.txt  Camera.cpp  Camera.h  Eye.cpp  Eye.h  GeometryMesh.cpp  GeometryMesh.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Method.cpp  Method.h  Model.cpp  Model.h  Node.cpp  Node.h  PBRMaterial.cpp  PBRMaterial.h  Scene.cpp  Scene.h  Technique.cpp  Technique.h  common.h
renderer/scene/include/: BindGroup.h  Camera.h  Eye.h  Light.h  Material.h  Mesh.h  Model.h  Phase.h  Scene.h  Technique.h  common.h
renderer/scene/source/: BindGroup.cpp  Eye.cpp  Material.cpp  Mesh.cpp  Model.cpp  Phase.cpp  Scene.cpp  Technique.cpp
sample/: AnimationModel.h  BistroSample.h  GraphSample.h  GraphSample.hpp  Model.hpp  Particles.h  RotatingCube.hpp  Triangle.hpp  VirtualTexture.h  common.h  main.cpp  sample.cpp  sample.h  ui.h
tools/meshoptimize/: CMakeLists.txt  MeshOptimizer.cpp  MeshOptimizer.h
(+62 files in other folders)
